.antlr/MyRuleParser.java
// Generated from /Users/akabaralishaikh/work/github/test/MyRule.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, EQ=3, LT=4, GT=5, LTEQ=6, GTEQ=7, NEQ=8, IN=9, NIN=10, 
		HALL=11, HNONE=12, HANY=13, OBRACKET=14, CBRACKET=15, OPARAM=16, CPARAM=17, 
		AND=18, OR=19, VNT=20, VNTE=21, VOT=22, VOTE=23, VE=24, WAO=25, INT=26, 
		FLOAT=27, STRING=28, TRUE=29, FALSE=30, SPACE=31, WS=32, ATTRNAME=33;
	public static final int
		RULE_query = 0, RULE_leftexpr = 1, RULE_listStrings = 2, RULE_stringElements = 3, 
		RULE_stringElement = 4, RULE_listInts = 5, RULE_intElements = 6, RULE_intElement = 7, 
		RULE_listOfLists = 8, RULE_list = 9, RULE_floatElement = 10, RULE_listOfTimeLists = 11, 
		RULE_timeList = 12, RULE_timeStringElement = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "leftexpr", "listStrings", "stringElements", "stringElement", 
			"listInts", "intElements", "intElement", "listOfLists", "list", "floatElement", 
			"listOfTimeLists", "timeList", "timeStringElement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'in-time-range'", "','", "'='", "'<'", "'>'", "'<='", "'>='", 
			"'not='", "'in'", "'not-in'", "'has-all'", "'has-none'", "'has-any'", 
			"'['", "']'", "'('", "')'", "'and'", "'or'", "'newer-than'", "'newer-than-or-equal-to'", 
			"'older-than'", "'older-than-or-equal-to'", "'equals-version'", "'within-any-of'", 
			null, null, null, "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "EQ", "LT", "GT", "LTEQ", "GTEQ", "NEQ", "IN", "NIN", 
			"HALL", "HNONE", "HANY", "OBRACKET", "CBRACKET", "OPARAM", "CPARAM", 
			"AND", "OR", "VNT", "VNTE", "VOT", "VOTE", "VE", "WAO", "INT", "FLOAT", 
			"STRING", "TRUE", "FALSE", "SPACE", "WS", "ATTRNAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	 
		public QueryContext() { }
		public void copyFrom(QueryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class HasIntsExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListIntsContext listInts() {
			return getRuleContext(ListIntsContext.class,0);
		}
		public TerminalNode HALL() { return getToken(MyRuleParser.HALL, 0); }
		public TerminalNode HANY() { return getToken(MyRuleParser.HANY, 0); }
		public TerminalNode HNONE() { return getToken(MyRuleParser.HNONE, 0); }
		public HasIntsExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class CompareIntExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public TerminalNode INT() { return getToken(MyRuleParser.INT, 0); }
		public TerminalNode GT() { return getToken(MyRuleParser.GT, 0); }
		public TerminalNode LT() { return getToken(MyRuleParser.LT, 0); }
		public TerminalNode GTEQ() { return getToken(MyRuleParser.GTEQ, 0); }
		public TerminalNode LTEQ() { return getToken(MyRuleParser.LTEQ, 0); }
		public CompareIntExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class WithinExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListOfListsContext listOfLists() {
			return getRuleContext(ListOfListsContext.class,0);
		}
		public TerminalNode WAO() { return getToken(MyRuleParser.WAO, 0); }
		public WithinExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class OrExprContext extends QueryContext {
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public TerminalNode OR() { return getToken(MyRuleParser.OR, 0); }
		public OrExprContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class EqualStringExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public TerminalNode STRING() { return getToken(MyRuleParser.STRING, 0); }
		public TerminalNode EQ() { return getToken(MyRuleParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(MyRuleParser.NEQ, 0); }
		public EqualStringExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class VersionExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public TerminalNode STRING() { return getToken(MyRuleParser.STRING, 0); }
		public TerminalNode VNT() { return getToken(MyRuleParser.VNT, 0); }
		public TerminalNode VNTE() { return getToken(MyRuleParser.VNTE, 0); }
		public TerminalNode VOT() { return getToken(MyRuleParser.VOT, 0); }
		public TerminalNode VOTE() { return getToken(MyRuleParser.VOTE, 0); }
		public TerminalNode VE() { return getToken(MyRuleParser.VE, 0); }
		public VersionExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class TimeRangeExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListOfTimeListsContext listOfTimeLists() {
			return getRuleContext(ListOfTimeListsContext.class,0);
		}
		public TimeRangeExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class EmbbedExprContext extends QueryContext {
		public TerminalNode OPARAM() { return getToken(MyRuleParser.OPARAM, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode CPARAM() { return getToken(MyRuleParser.CPARAM, 0); }
		public EmbbedExprContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class InIntsExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListIntsContext listInts() {
			return getRuleContext(ListIntsContext.class,0);
		}
		public TerminalNode IN() { return getToken(MyRuleParser.IN, 0); }
		public TerminalNode NIN() { return getToken(MyRuleParser.NIN, 0); }
		public InIntsExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class EqualIntExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public TerminalNode INT() { return getToken(MyRuleParser.INT, 0); }
		public TerminalNode EQ() { return getToken(MyRuleParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(MyRuleParser.NEQ, 0); }
		public EqualIntExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class HasStringsExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListStringsContext listStrings() {
			return getRuleContext(ListStringsContext.class,0);
		}
		public TerminalNode HALL() { return getToken(MyRuleParser.HALL, 0); }
		public TerminalNode HANY() { return getToken(MyRuleParser.HANY, 0); }
		public TerminalNode HNONE() { return getToken(MyRuleParser.HNONE, 0); }
		public HasStringsExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class InStringsExpContext extends QueryContext {
		public Token op;
		public LeftexprContext leftexpr() {
			return getRuleContext(LeftexprContext.class,0);
		}
		public ListStringsContext listStrings() {
			return getRuleContext(ListStringsContext.class,0);
		}
		public TerminalNode IN() { return getToken(MyRuleParser.IN, 0); }
		public TerminalNode NIN() { return getToken(MyRuleParser.NIN, 0); }
		public InStringsExpContext(QueryContext ctx) { copyFrom(ctx); }
	}
	public static class AndExprContext extends QueryContext {
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public TerminalNode AND() { return getToken(MyRuleParser.AND, 0); }
		public AndExprContext(QueryContext ctx) { copyFrom(ctx); }
	}

	public final QueryContext query() throws RecognitionException {
		return query(0);
	}

	private QueryContext query(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		QueryContext _localctx = new QueryContext(_ctx, _parentState);
		QueryContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_query, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new EmbbedExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(29);
				match(OPARAM);
				setState(30);
				query(0);
				setState(31);
				match(CPARAM);
				}
				break;
			case 2:
				{
				_localctx = new EqualIntExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(33);
				leftexpr();
				setState(34);
				((EqualIntExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==EQ || _la==NEQ) ) {
					((EqualIntExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(35);
				match(INT);
				}
				break;
			case 3:
				{
				_localctx = new EqualStringExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(37);
				leftexpr();
				setState(38);
				((EqualStringExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==EQ || _la==NEQ) ) {
					((EqualStringExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(39);
				match(STRING);
				}
				break;
			case 4:
				{
				_localctx = new CompareIntExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(41);
				leftexpr();
				setState(42);
				((CompareIntExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << LTEQ) | (1L << GTEQ))) != 0)) ) {
					((CompareIntExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(43);
				match(INT);
				}
				break;
			case 5:
				{
				_localctx = new InIntsExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				leftexpr();
				setState(46);
				((InIntsExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==IN || _la==NIN) ) {
					((InIntsExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(47);
				listInts();
				}
				break;
			case 6:
				{
				_localctx = new InStringsExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(49);
				leftexpr();
				setState(50);
				((InStringsExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==IN || _la==NIN) ) {
					((InStringsExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(51);
				listStrings();
				}
				break;
			case 7:
				{
				_localctx = new HasIntsExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(53);
				leftexpr();
				setState(54);
				((HasIntsExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HALL) | (1L << HNONE) | (1L << HANY))) != 0)) ) {
					((HasIntsExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(55);
				listInts();
				}
				break;
			case 8:
				{
				_localctx = new HasStringsExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				leftexpr();
				setState(58);
				((HasStringsExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HALL) | (1L << HNONE) | (1L << HANY))) != 0)) ) {
					((HasStringsExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(59);
				listStrings();
				}
				break;
			case 9:
				{
				_localctx = new WithinExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				leftexpr();
				setState(62);
				((WithinExpContext)_localctx).op = match(WAO);
				setState(63);
				listOfLists();
				}
				break;
			case 10:
				{
				_localctx = new TimeRangeExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(65);
				leftexpr();
				setState(66);
				((TimeRangeExpContext)_localctx).op = match(T__0);
				setState(67);
				listOfTimeLists();
				}
				break;
			case 11:
				{
				_localctx = new VersionExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(69);
				leftexpr();
				setState(70);
				((VersionExpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VNT) | (1L << VNTE) | (1L << VOT) | (1L << VOTE) | (1L << VE))) != 0)) ) {
					((VersionExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(71);
				match(STRING);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(81);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new AndExprContext(new QueryContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_query);
						setState(75);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(76);
						match(AND);
						setState(77);
						query(14);
						}
						break;
					case 2:
						{
						_localctx = new OrExprContext(new QueryContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_query);
						setState(78);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(79);
						match(OR);
						setState(80);
						query(13);
						}
						break;
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LeftexprContext extends ParserRuleContext {
		public TerminalNode ATTRNAME() { return getToken(MyRuleParser.ATTRNAME, 0); }
		public LeftexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftexpr; }
	}

	public final LeftexprContext leftexpr() throws RecognitionException {
		LeftexprContext _localctx = new LeftexprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_leftexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ATTRNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListStringsContext extends ParserRuleContext {
		public TerminalNode OBRACKET() { return getToken(MyRuleParser.OBRACKET, 0); }
		public StringElementsContext stringElements() {
			return getRuleContext(StringElementsContext.class,0);
		}
		public TerminalNode CBRACKET() { return getToken(MyRuleParser.CBRACKET, 0); }
		public ListStringsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listStrings; }
	}

	public final ListStringsContext listStrings() throws RecognitionException {
		ListStringsContext _localctx = new ListStringsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listStrings);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(OBRACKET);
			setState(89);
			stringElements();
			setState(90);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringElementsContext extends ParserRuleContext {
		public List<StringElementContext> stringElement() {
			return getRuleContexts(StringElementContext.class);
		}
		public StringElementContext stringElement(int i) {
			return getRuleContext(StringElementContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(MyRuleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(MyRuleParser.SPACE, i);
		}
		public StringElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringElements; }
	}

	public final StringElementsContext stringElements() throws RecognitionException {
		StringElementsContext _localctx = new StringElementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stringElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			stringElement();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(93);
				match(T__1);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(94);
					match(SPACE);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				stringElement();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringElementContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MyRuleParser.STRING, 0); }
		public StringElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringElement; }
	}

	public final StringElementContext stringElement() throws RecognitionException {
		StringElementContext _localctx = new StringElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stringElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListIntsContext extends ParserRuleContext {
		public TerminalNode OBRACKET() { return getToken(MyRuleParser.OBRACKET, 0); }
		public IntElementsContext intElements() {
			return getRuleContext(IntElementsContext.class,0);
		}
		public TerminalNode CBRACKET() { return getToken(MyRuleParser.CBRACKET, 0); }
		public ListIntsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listInts; }
	}

	public final ListIntsContext listInts() throws RecognitionException {
		ListIntsContext _localctx = new ListIntsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listInts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(OBRACKET);
			setState(109);
			intElements();
			setState(110);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntElementsContext extends ParserRuleContext {
		public List<IntElementContext> intElement() {
			return getRuleContexts(IntElementContext.class);
		}
		public IntElementContext intElement(int i) {
			return getRuleContext(IntElementContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(MyRuleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(MyRuleParser.SPACE, i);
		}
		public IntElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intElements; }
	}

	public final IntElementsContext intElements() throws RecognitionException {
		IntElementsContext _localctx = new IntElementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_intElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			intElement();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(113);
				match(T__1);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(114);
					match(SPACE);
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(120);
				intElement();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntElementContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MyRuleParser.INT, 0); }
		public IntElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intElement; }
	}

	public final IntElementContext intElement() throws RecognitionException {
		IntElementContext _localctx = new IntElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_intElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfListsContext extends ParserRuleContext {
		public TerminalNode OBRACKET() { return getToken(MyRuleParser.OBRACKET, 0); }
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public TerminalNode CBRACKET() { return getToken(MyRuleParser.CBRACKET, 0); }
		public List<TerminalNode> SPACE() { return getTokens(MyRuleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(MyRuleParser.SPACE, i);
		}
		public ListOfListsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfLists; }
	}

	public final ListOfListsContext listOfLists() throws RecognitionException {
		ListOfListsContext _localctx = new ListOfListsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listOfLists);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(OBRACKET);
			setState(129);
			list();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(130);
				match(T__1);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(131);
					match(SPACE);
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				list();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode OBRACKET() { return getToken(MyRuleParser.OBRACKET, 0); }
		public List<FloatElementContext> floatElement() {
			return getRuleContexts(FloatElementContext.class);
		}
		public FloatElementContext floatElement(int i) {
			return getRuleContext(FloatElementContext.class,i);
		}
		public TerminalNode CBRACKET() { return getToken(MyRuleParser.CBRACKET, 0); }
		public List<TerminalNode> SPACE() { return getTokens(MyRuleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(MyRuleParser.SPACE, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	}
